# SS02

./: .gitignore  CMakeLists.txt  main.cpp
Battleship/: Battleships.cpp  Setup.cpp  Setup.h
GreenJewelWorld/: GreenJewelWorld.cpp
KeyboardWhackEmAll/: KeyboardWhackEmAll.cpp  Windows.cpp  Windows.h
SpacemanZuurp/: SpacemanZuurp.cpp
UsingEnumerations/: README.md  UsingEnumerations.cpp
UsingPointersAndTheFreeStore/: UsingPointersAndTheFreeStore.cpp
UsingStructures/: README.md  UsingStructures.cpp
